@@ -18,6 +18,7 @@ SMN?12		Awesomer Super Luigi Mini
 SMN?31		New Super Mario Bros. Wii - Other World
 SMN?41		Devil Mario Winter Special
 SMN?60		Remixed Super Mario Bros. Wii
+SMN?65		Ghostly Super Ghost Boos. Wii
 SMN?66		The Legend of Yoshi
 SMN?DU		DarkUmbra Super Mario Bros: Anniversary Edition
 SMN?FL		Newer: Falling Leaf
