@@ -8,7 +8,8 @@ v6.1.0:
 - support for MKWiimm 2015-12
 - support for MKWiimm 2016-02
 - support for The Legend of Yoshi (SMN?66)
-- support for Remixed Super Mario Bros. Wii ()
+- support for Remixed Super Mario Bros. Wii (SMN?60)
+- support for Ghostly Super Mario Boos. Wii (SMN?65)
 
 v6.0.0:
 - update szs to version 1.40a
